HFA: Refactor sol°

--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -25,17 +25,23 @@
         <script src="app/Controllers/rootCtrl.js" type="text/javascript" charset="utf-8" ></script>
         <script src="app/Controllers/homeCtrl.js" type="text/javascript" charset="utf-8" ></script>
         <script src="app/Controllers/testCtrl.js" type="text/javascript" charset="utf-8" ></script>
-        <script src="app/Directives/services.js" type="text/javascript" charset="utf-8" ></script>
+        <script src="app/Services/services.js" type="text/javascript" charset="utf-8" ></script>
 
         <script src="app/Templates/bls_tpls.js" type="text/javascript" charset="utf-8"></script>
 
-        <script src="app/Directives/draggableDirective.js"  type="text/javascript" charset="utf-8" ></script>
+        <script src="app/Directives/allowDrag.js"  type="text/javascript" charset="utf-8" ></script>
         <script src="app/Directives/blsTable.js"  type="text/javascript" charset="utf-8" ></script>
-        <script src="app/Directives/blsRow.js"  type="text/javascript" charset="utf-8" ></script>
+        <script src="app/Directives/blsActions.js" type="text/javascript" charset="utf-8"></script>
+        <script src="app/Directives/blsRowChild.js" type="text/javascript" charset="utf-8"></script>
+        <script src="app/Directives/blsRows.js" type="text/javascript" charset="utf-8"></script>
+        <script src="app/Directives/dynamic.js"  type="text/javascript" charset="utf-8" ></script>
         <script src="app/Directives/blsHeader.js"  type="text/javascript" charset="utf-8" ></script>
-        <script src="app/Directives/blsCols.js"  type="text/javascript" charset="utf-8" ></script>
+        <script src="app/Directives/blsCols.js" type="text/javascript" charset="utf-8"></script>
+        <script src="app/Directives/blsCol.js"  type="text/javascript" charset="utf-8" ></script>
         <script src="app/Directives/blsTr.js"  type="text/javascript" charset="utf-8" ></script>
+        <script src="app/Directives/draggable.js" type="text/javascript" charset="utf-8"></script>
         <script src="app/Directives/dropable.js" type="text/javascript" charset="utf-8" ></script>
+        <script src="app/Directives/blsDropDown.js" type="text/javascript" charset="utf-8"></script>
         <script src="app/Directives/blsToolBar.js" type="text/javascript" charset="utf-8" ></script>
     </head>
     <body>
