HFA: Fix jsHint errors

--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -24,7 +24,7 @@
         <script src="app/Controllers/rootCtrl.js" type="text/javascript" charset="utf-8" ></script>
         <script src="app/Controllers/homeCtrl.js" type="text/javascript" charset="utf-8" ></script>
         <script src="app/Controllers/testCtrl.js" type="text/javascript" charset="utf-8" ></script>
-        <script src="dist/blsComponents.min.js"  type="text/javascript" charset="utf-8" ></script>
+        <script src="temp/blsComponents.js"  type="text/javascript" charset="utf-8" ></script>
     </head>
     <body>
         <div class="container col-md-8 col-md-offset-2">
