--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -7,7 +7,7 @@
         <base href="/">
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="lib/Font-Awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="Content/Styles/styles.css">
+        <link rel="stylesheet" href="dist/styles/styles.min.css">
         <script src="lib/jquery/dist/jquery.min.js"></script>
         <script src="lib/angular/angular.min.js"></script>
         <script src="lib/angular-route/angular-route.min.js"></script>
@@ -24,7 +24,7 @@
         <script src="app/Controllers/rootCtrl.js" type="text/javascript" charset="utf-8" ></script>
         <script src="app/Controllers/homeCtrl.js" type="text/javascript" charset="utf-8" ></script>
         <script src="app/Controllers/testCtrl.js" type="text/javascript" charset="utf-8" ></script>
-        <script src="temp/blsComponents.js"  type="text/javascript" charset="utf-8" ></script>
+        <script src="dist/js/blsComponents.min.js"  type="text/javascript" charset="utf-8" ></script>
     </head>
     <body>
         <div class="container col-md-8 col-md-offset-2">
