--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -19,16 +19,14 @@
     <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="dist/js/blsComponents.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
-        //var app = angular.module('app', ['bls_components', 'ui.bootstrap', 'LocalStorageModule', 'ngRoute', 'ngAnimate']);
-        var app = angular.module('app', ['ui.bootstrap', 'LocalStorageModule', 'ngRoute', 'ngAnimate']);
+        var app = angular.module('app', ['bls_components', 'ui.bootstrap', 'LocalStorageModule', 'ngRoute', 'ngAnimate']);
     </script>
     <script src="app/app.js" type="text/javascript" charset="utf-8"></script>
     <script src="app/Controllers/rootCtrl.js" type="text/javascript" charset="utf-8"></script>
     <script src="app/Controllers/homeCtrl.js" type="text/javascript" charset="utf-8"></script>
     <script src="app/Controllers/testCtrl.js" type="text/javascript" charset="utf-8"></script>
-    <script src="app/Directives/blsSplitter.js" type="text/javascript" charset="utf-8"></script>
-    <!--<script src="dist/js/blsComponents.min.js" type="text/javascript" charset="utf-8"></script>-->
 </head>
 <body>
     <div class="container col-md-8 col-md-offset-2">
