HFA: Fix col resize bug

--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -20,7 +20,7 @@
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="dist/js/blsComponents.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="dist/js/blsComponents.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
         var app = angular.module('app', ['bls_components', 'ui.bootstrap', 'LocalStorageModule', 'ngRoute', 'ngAnimate', 'ui.router']);
     </script>
