HFA: Add new page for testing

--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -49,6 +49,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Examples <span class="caret"> <span class="sr-only">(current)</span></span></a>
                             <ul class="dropdown-menu">
                                 <li ui-sref-active="active"><a ui-sref="root.blsTable">blsTable</a></li>
+                                <li ui-sref-active="active"><a ui-sref="root.blsTableSample">blsTable sample</a></li>
                                 <li ui-sref-active="active"><a ui-sref="root.blsSplitter">blsSplitter</a></li>
                             </ul>
                         </li>
