HFA: Finalisation de la page detail Person

--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -25,6 +25,7 @@
     <script src="app/Controllers/rootCtrl.js" type="text/javascript" charset="utf-8"></script>
     <script src="app/Controllers/homeCtrl.js" type="text/javascript" charset="utf-8"></script>
     <script src="app/Controllers/testCtrl.js" type="text/javascript" charset="utf-8"></script>
+    <script src="app/Controllers/detailCtrl.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
     <div class="container col-md-8 col-md-offset-2">
