--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li ui-sref-active="active"><a ui-sref="docs">Docs</a></li>
+                        <li ui-sref-active="active"><a target="_self" href="/docs/api">Docs</a></li>
                         <li class="dropdown" ui-sref-active="active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Examples <span class="caret"> <span class="sr-only">(current)</span></span></a>
                             <ul class="dropdown-menu">
