--- a/src/GruntTest/wwwroot/index.html
+++ b/src/GruntTest/wwwroot/index.html
@@ -49,6 +49,7 @@
                                 <li ui-sref-active="active"><a ui-sref="root.blsTable">blsTable</a></li>
                                 <li ui-sref-active="active"><a ui-sref="root.blsTableSample">blsTable sample</a></li>
                                 <li ui-sref-active="active"><a ui-sref="root.blsSplitter">blsSplitter</a></li>
+                                <li ui-sref-active="active"><a ui-sref="root.resizableTable">resizableTable</a></li>
                             </ul>
                         </li>
                     </ul>
